# clim

./: .gitignore  LICENSE  README.md  ffmpeg_path_setup.md  requirements.txt  yt_downloader.py
Converter/: main.py
Converter/encoder/: clim_encoder.py  clustering.py  encoding_method_selector.py  frames_encoder.py  palette.py  preferences.py  scanners.py  utils.py
Converter/video/: framer.py
Player/: CMakeLists.txt  Makefile
Player/include/: audio_player.h  binary_reader.h  bit_reader.h  clim_decoder.h  clim_player.h  cluster_decoder.h  color.h  exit_handler.h  filesystem.h  frame.h  huffman_codebook.h  printable.h
Player/src/: audio_player.cpp  binary_reader.cpp  bit_reader.cpp  clim_decoder.cpp  clim_player.cpp  cluster_decoder.cpp  exit_handler.cpp  filesystem.cpp  frame.cpp  main.cpp
docs/: clim_format.md
docs/troubleshooting/: cmake.md  make.md  not_recognized_cmake.md  not_recognized_make.md
